# med-regulatory

./: .env.example  .gitignore  CLAUDE.md  README.local.md  README.md  docker-compose.local.yml  docker-compose.yml  system_specifications.md
.github/workflows/: azure-static-web-apps-production.yml  azure-static-web-apps-staging.yml  cd.yml  ci.yml  dependencies.yml  release.yml  security.yml
backend/: .env.example  .flake8  Dockerfile  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  startup.sh
backend/src/: __init__.py  main.py
backend/src/admin/: models.py  router.py
backend/src/auth/: __init__.py  auth.py  firebase_auth.py  firebase_router.py  hybrid_auth.py  models.py  password_validation.py  router.py
backend/src/classifier/: __init__.py  classifier.py  models.py  prompt.py  router.py
backend/src/crawler/: __init__.py  crawler.py  models.py  router.py
backend/src/db/: __init__.py  database.py  models.py
backend/src/guidelines/: models.py  router.py
backend/src/indexer/: __init__.py  indexer.py  models.py  router.py
backend/src/news_collector/: collector.py  fetcher.py  filters.py  router.py
backend/src/process/: model.py  proc.py  router.py
backend/src/scripts/: check_auth.py  check_users_in_container.py  create_admin_in_container.py  create_admin_user.py  create_dummy_guidelines.py  create_dummy_in_container.py  init_database.py  test_cloud_sql_proxy.py  test_pdf_extraction.py  update_admin_password.py
backend/src/utils/: __init__.py  api_cache.py  db_health.py  llama.py  logging_config.py
backend/src/workflow/: __init__.py  model.py  router.py  workflow.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_endpoints.py
backend/tests/unit/: test_models.py
backend/tests/unit/auth/: test_auth.py
frontend/: .env.example  Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/public/: staticwebapp.config.json
frontend/src/: App.jsx  index.css
frontend/src/api/: axiosClient.js  workflow.js
frontend/src/constants/: enum.js
frontend/tests/: setup.js
nginx/: nginx-http-only.conf  nginx.conf  nginx.conf.template  nginx.local.conf
scripts/: generate-nginx-config.sh  generate-ssl.sh  init-letsencrypt.sh
(+44 files in other folders)
